# arts

./: .clang-tidy  .gitignore  CMakeLists.txt  environment-dev-mac.yml
controlfiles/general/: agendas.arts
doc/arts/: CMakeLists.txt  concept.absorption.lbl.rst  concept.absorption.rst  concept.oem.rst  concept.physical_grids.rst  concept.radiative_transfer.rst  dev.classes.formatter.rst  dev.doc.rst  dev.docs.rst  dev.error.rst  dev.species.rst  devs.rst  guide.theory.absorption.line-by-line.rst  guide.theory.absorption.propagation_matrix.rst  guide.theory.absorption.rst  guide.theory.absorption.spectral_radiance.rst  guide.theory.rst
doc/uguide/: absorption_theory.tex
examples/1-getting-started/: README.rst
examples/2-arts-catalogue-data/: README.rst
examples/3-recipes/: README.rst
examples/recipes/: FastFlux1D.py  README.rst
python/doc/: gen_examples.py
src/: CMakeLists.txt  absorption.h  agendas.cc  array.h  artstime.cc  disort.cc  doit.cc  gui_help.cc  gui_help.cpp  gui_help.h  gui_inc.cc  gui_inc.h  gui_macros.h  gui_menubar.cc  gui_menubar.h  gui_plot.cc  gui_plot.cpp  gui_plot.h  gui_plotdata.cc  gui_plotdata.h  gui_windows.cc  gui_windows.h  m_abs.cc  m_atm.cc  m_cia.cc  m_doit.cc  m_fos.cc  m_lbl.cc  m_linemixing.cc  m_obsel.cc  m_rad.cc  m_radiation_field.cc  m_rte.cc  m_spectral_radiance_field.cc  m_xsec.cc  make_auto_wsa.cpp  methods.cc  quantum.cc  rt4.cc  rte.cc  (+15 more)
src/core/quantum/: CMakeLists.txt  hitran_species.cc  hitran_species.h  hitran_species_info.cc  hitran_species_info.h  jpl_species.cc  jpl_species.h  jpl_species_info.cc  jpl_species_info.h  make_jpl_data.cc  make_molparam_map.cc  quantum.cc  quantum.h
src/partfun/: CMakeLists.txt  make_auto_partfuns.cc  partfun.cc
src/python_interface/: CMakeLists.txt  gen_auto_py_groups.cpp  gen_auto_py_methods.cpp  gen_auto_py_options.cpp  hpy_arts.h  hpy_numpy.h  hpy_opaque.h  hpy_vector.h  py_agenda.cpp  py_atm.cpp  py_file.cpp  py_griddedfield.cpp  py_jac.cpp  py_lbl.cpp  py_module.cpp  py_scattering_species.cpp  py_sensor.cpp  py_species.cpp  py_workspace.cpp  python_interface.h  (+1 more)
testdata/: cat_data_files.txt
(+127 files in other folders)
